rename supervsied training nobtebook

--- a/nbs/refactor_supervised.ipynb
+++ b/nbs/refactor_supervised.ipynb
@@ -7,7 +7,8 @@
     "ExecuteTime": {
      "end_time": "2020-09-02T01:57:59.475832Z",
      "start_time": "2020-09-02T01:57:59.454598Z"
-    }
+    },
+    "cell_style": "center"
    },
    "outputs": [],
    "source": [
