not sure, tried to implement multi gpu and having some bugs, runs fast for some steps but then it slows down

--- a/nbs/evaluation.ipynb
+++ b/nbs/evaluation.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-02T18:07:16.288194Z",
-     "start_time": "2020-09-02T18:07:16.267623Z"
+     "end_time": "2020-09-06T00:10:52.217081Z",
+     "start_time": "2020-09-06T00:10:52.089977Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-02T18:07:16.564010Z",
-     "start_time": "2020-09-02T18:07:16.547917Z"
+     "end_time": "2020-09-06T00:10:53.030764Z",
+     "start_time": "2020-09-06T00:10:53.009585Z"
     }
    },
    "outputs": [],
@@ -34,11 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-02T18:07:18.553463Z",
-     "start_time": "2020-09-02T18:07:16.811057Z"
+     "end_time": "2020-09-06T00:15:00.247299Z",
+     "start_time": "2020-09-06T00:14:59.905081Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "os.environ[\"XLA_PYTHON_CLIENT_ALLOCATOR\"] = \"platform\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-06T00:15:01.973511Z",
+     "start_time": "2020-09-06T00:15:01.931831Z"
     }
    },
    "outputs": [],
@@ -95,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-02T18:07:18.589452Z",
-     "start_time": "2020-09-02T18:07:18.555946Z"
+     "end_time": "2020-09-06T00:15:05.014416Z",
+     "start_time": "2020-09-06T00:15:04.975218Z"
     }
    },
    "outputs": [],
@@ -109,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-02T18:07:18.627163Z",
-     "start_time": "2020-09-02T18:07:18.592804Z"
+     "end_time": "2020-09-06T00:15:07.163621Z",
+     "start_time": "2020-09-06T00:15:07.123356Z"
     }
    },
    "outputs": [],
@@ -131,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-02T18:07:19.235650Z",
-     "start_time": "2020-09-02T18:07:18.720884Z"
+     "end_time": "2020-09-06T00:15:07.844641Z",
+     "start_time": "2020-09-06T00:15:07.386628Z"
     }
    },
    "outputs": [
