remove unused imports and format

--- a/dev_nbs/general-checkpoint.ipynb
+++ b/dev_nbs/general-checkpoint.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:32.717218Z",
-     "start_time": "2021-04-01T16:12:32.694741Z"
+     "end_time": "2021-04-01T16:16:38.276663Z",
+     "start_time": "2021-04-01T16:16:38.251088Z"
     },
     "init_cell": true
    },
@@ -21,8 +21,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:32.736046Z",
-     "start_time": "2021-04-01T16:12:32.719689Z"
+     "end_time": "2021-04-01T16:16:38.295823Z",
+     "start_time": "2021-04-01T16:16:38.279118Z"
     },
     "init_cell": true
    },
@@ -41,8 +41,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:33.778925Z",
-     "start_time": "2021-04-01T16:12:32.739606Z"
+     "end_time": "2021-04-01T16:16:39.315492Z",
+     "start_time": "2021-04-01T16:16:38.299430Z"
     },
     "init_cell": true
    },
@@ -91,8 +91,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:33.804827Z",
-     "start_time": "2021-04-01T16:12:33.781395Z"
+     "end_time": "2021-04-01T16:16:39.341151Z",
+     "start_time": "2021-04-01T16:16:39.317754Z"
     },
     "init_cell": true
    },
@@ -110,8 +110,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:33.851403Z",
-     "start_time": "2021-04-01T16:12:33.806729Z"
+     "end_time": "2021-04-01T16:16:39.386419Z",
+     "start_time": "2021-04-01T16:16:39.343242Z"
     },
     "init_cell": true
    },
@@ -125,8 +125,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:35.842206Z",
-     "start_time": "2021-04-01T16:12:33.853211Z"
+     "end_time": "2021-04-01T16:16:41.378051Z",
+     "start_time": "2021-04-01T16:16:39.388154Z"
     },
     "init_cell": true
    },
@@ -141,8 +141,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:12:35.868607Z",
-     "start_time": "2021-04-01T16:12:35.845851Z"
+     "end_time": "2021-04-01T16:16:41.403403Z",
+     "start_time": "2021-04-01T16:16:41.380193Z"
     },
     "init_cell": true
    },
@@ -154,18 +154,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:13:21.011049Z",
-     "start_time": "2021-04-01T16:13:16.513468Z"
+     "end_time": "2021-04-01T16:16:42.534881Z",
+     "start_time": "2021-04-01T16:16:41.406306Z"
     },
     "init_cell": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "cross_repliace_axis = None\n",
+    "cross_repliace_axis = \"i\"\n",
     "\n",
     "model = hk.transform_with_state(\n",
     "    lambda x, phase, training: SimpleModel(\n",
@@ -194,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:13:22.750268Z",
-     "start_time": "2021-04-01T16:13:22.481005Z"
+     "end_time": "2021-04-01T16:16:42.782167Z",
+     "start_time": "2021-04-01T16:16:42.537121Z"
     },
     "init_cell": true,
     "scrolled": true
@@ -207,10 +207,10 @@
     {
      "data": {
       "text/plain": [
-       "<meta.trainers.MetaTrainerB at 0x7fd040452e50>"
+       "<meta.trainers.MetaTrainerB at 0x7fe77a801a10>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,12 +238,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:13:40.837042Z",
-     "start_time": "2021-04-01T16:13:40.752640Z"
-    }
+     "end_time": "2021-04-01T16:16:42.809271Z",
+     "start_time": "2021-04-01T16:16:42.784323Z"
+    },
+    "init_cell": true
    },
    "outputs": [
     {
@@ -251,25 +252,25 @@
      "output_type": "stream",
      "text": [
       "FlatMapping({\n",
-      "  'simple_model/fast/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/fast/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "  'simple_model/fast_1/batch_norm': FlatMapping({'offset': (1, 4), 'scale': (1, 4)}),\n",
-      "  'simple_model/fast_1/linear': FlatMapping({'b': (4,), 'w': (8, 4)}),\n",
-      "  'simple_model/fast_1/linear_1': FlatMapping({'b': (2,), 'w': (4, 2)}),\n",
-      "  'simple_model/slow1/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow1/linear': FlatMapping({'b': (8,), 'w': (2, 8)}),\n",
-      "  'simple_model/slow2/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow2/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
+      "  'simple_model/fast/batch_norm': FlatMapping({'offset': (1, 1, 8), 'scale': (1, 1, 8)}),\n",
+      "  'simple_model/fast/linear': FlatMapping({'b': (1, 8), 'w': (1, 8, 8)}),\n",
+      "  'simple_model/fast_1/batch_norm': FlatMapping({'offset': (1, 1, 4), 'scale': (1, 1, 4)}),\n",
+      "  'simple_model/fast_1/linear': FlatMapping({'b': (1, 4), 'w': (1, 8, 4)}),\n",
+      "  'simple_model/fast_1/linear_1': FlatMapping({'b': (1, 2), 'w': (1, 4, 2)}),\n",
+      "  'simple_model/slow1/batch_norm': FlatMapping({'offset': (1, 1, 8), 'scale': (1, 1, 8)}),\n",
+      "  'simple_model/slow1/linear': FlatMapping({'b': (1, 8), 'w': (1, 2, 8)}),\n",
+      "  'simple_model/slow2/batch_norm': FlatMapping({'offset': (1, 1, 8), 'scale': (1, 1, 8)}),\n",
+      "  'simple_model/slow2/linear': FlatMapping({'b': (1, 8), 'w': (1, 8, 8)}),\n",
       "})\n",
       "FlatMapping({\n",
-      "  'simple_model/fast/batch_norm/~/mean_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/fast/batch_norm/~/var_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/fast_1/batch_norm/~/mean_ema': FlatMapping({'average': (1, 4), 'counter': (), 'hidden': (1, 4)}),\n",
-      "  'simple_model/fast_1/batch_norm/~/var_ema': FlatMapping({'average': (1, 4), 'counter': (), 'hidden': (1, 4)}),\n",
-      "  'simple_model/slow1/batch_norm/~/mean_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/slow1/batch_norm/~/var_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/slow2/batch_norm/~/mean_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/slow2/batch_norm/~/var_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
+      "  'simple_model/fast/batch_norm/~/mean_ema': FlatMapping({'average': (1, 1, 8), 'counter': (1,), 'hidden': (1, 1, 8)}),\n",
+      "  'simple_model/fast/batch_norm/~/var_ema': FlatMapping({'average': (1, 1, 8), 'counter': (1,), 'hidden': (1, 1, 8)}),\n",
+      "  'simple_model/fast_1/batch_norm/~/mean_ema': FlatMapping({'average': (1, 1, 4), 'counter': (1,), 'hidden': (1, 1, 4)}),\n",
+      "  'simple_model/fast_1/batch_norm/~/var_ema': FlatMapping({'average': (1, 1, 4), 'counter': (1,), 'hidden': (1, 1, 4)}),\n",
+      "  'simple_model/slow1/batch_norm/~/mean_ema': FlatMapping({'average': (1, 1, 8), 'counter': (1,), 'hidden': (1, 1, 8)}),\n",
+      "  'simple_model/slow1/batch_norm/~/var_ema': FlatMapping({'average': (1, 1, 8), 'counter': (1,), 'hidden': (1, 1, 8)}),\n",
+      "  'simple_model/slow2/batch_norm/~/mean_ema': FlatMapping({'average': (1, 1, 8), 'counter': (1,), 'hidden': (1, 1, 8)}),\n",
+      "  'simple_model/slow2/batch_norm/~/var_ema': FlatMapping({'average': (1, 1, 8), 'counter': (1,), 'hidden': (1, 1, 8)}),\n",
       "})\n",
       "(1,)\n"
      ]
@@ -283,73 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-01T16:13:59.963667Z",
-     "start_time": "2021-04-01T16:13:59.896529Z"
+     "end_time": "2021-04-01T16:17:08.284122Z",
+     "start_time": "2021-04-01T16:17:08.211937Z"
     },
+    "init_cell": true,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2,)\n",
-      "()\n",
-      "(4, 2, 2)\n",
-      "(4, 2)\n",
-      "(4, 2, 2)\n",
-      "(4, 2)\n",
-      "(4, 2, 2)\n",
-      "(4, 2)\n",
-      "None\n",
-      "(FlatMapping({\n",
-      "  'simple_model/fast/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/fast/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "  'simple_model/fast_1/batch_norm': FlatMapping({'offset': (1, 4), 'scale': (1, 4)}),\n",
-      "  'simple_model/fast_1/linear': FlatMapping({'b': (4,), 'w': (8, 4)}),\n",
-      "  'simple_model/fast_1/linear_1': FlatMapping({'b': (2,), 'w': (4, 2)}),\n",
-      "  'simple_model/slow1/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow1/linear': FlatMapping({'b': (8,), 'w': (2, 8)}),\n",
-      "  'simple_model/slow2/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow2/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "}), (1,))\n",
-      "FlatMapping({\n",
-      "  'simple_model/fast/batch_norm/~/mean_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/fast/batch_norm/~/var_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/fast_1/batch_norm/~/mean_ema': FlatMapping({'average': (1, 4), 'counter': (), 'hidden': (1, 4)}),\n",
-      "  'simple_model/fast_1/batch_norm/~/var_ema': FlatMapping({'average': (1, 4), 'counter': (), 'hidden': (1, 4)}),\n",
-      "  'simple_model/slow1/batch_norm/~/mean_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/slow1/batch_norm/~/var_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/slow2/batch_norm/~/mean_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "  'simple_model/slow2/batch_norm/~/var_ema': FlatMapping({'average': (1, 8), 'counter': (), 'hidden': (1, 8)}),\n",
-      "})\n",
-      "[ScaleByAdamState(count=(), mu=(FlatMapping({\n",
-      "  'simple_model/fast/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/fast/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "  'simple_model/fast_1/batch_norm': FlatMapping({'offset': (1, 4), 'scale': (1, 4)}),\n",
-      "  'simple_model/fast_1/linear': FlatMapping({'b': (4,), 'w': (8, 4)}),\n",
-      "  'simple_model/fast_1/linear_1': FlatMapping({'b': (2,), 'w': (4, 2)}),\n",
-      "  'simple_model/slow1/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow1/linear': FlatMapping({'b': (8,), 'w': (2, 8)}),\n",
-      "  'simple_model/slow2/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow2/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "}), (1,)), nu=(FlatMapping({\n",
-      "  'simple_model/fast/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/fast/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "  'simple_model/fast_1/batch_norm': FlatMapping({'offset': (1, 4), 'scale': (1, 4)}),\n",
-      "  'simple_model/fast_1/linear': FlatMapping({'b': (4,), 'w': (8, 4)}),\n",
-      "  'simple_model/fast_1/linear_1': FlatMapping({'b': (2,), 'w': (4, 2)}),\n",
-      "  'simple_model/slow1/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow1/linear': FlatMapping({'b': (8,), 'w': (2, 8)}),\n",
-      "  'simple_model/slow2/batch_norm': FlatMapping({'offset': (1, 8), 'scale': (1, 8)}),\n",
-      "  'simple_model/slow2/linear': FlatMapping({'b': (8,), 'w': (8, 8)}),\n",
-      "}), (1,))), ScaleState()]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inputs = (random.normal(PRNGKey(1), (4, 2, 2)),\n",
     "jnp.arange(2)[:, None].repeat(2, 0).repeat(2, 1),\n",
